Colaboratory を使用して作成しました

--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMoJxDEhQc+6cMy/iB+gOx2",
+      "authorship_tag": "ABX9TyO1ekw0zRCAik6MEtCEOWpU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,10 +33,10 @@
       "source": [
         "# メモ\n",
         "\n",
-        "qiita \n",
+        "qita \n",
         "ビット演算 (bit 演算) の使い方を総特集！ 〜 マスクビットから bit DP まで 〜 by 大槻 (通称、けんちょん) \n",
         "\n",
-        "https://qiita.com/drken/items/7c6ff2aa4d8fce1c9361\n",
+        "https://qita.com/drken/items/7c6ff2aa4d8fce1c9361\n",
         "\n",
         "全探索について  \n",
         "https://drken1215.hatenablog.com/entry/2019/12/14/171657\n",
@@ -1221,7 +1221,7 @@
       "cell_type": "code",
       "source": [
         "# 6. bit 全探索\n",
-        "# bit 全探索とは、nn 個の要素からなる集合 {0,1,…,n−10,1,…,n−1} の部分集合をすべて調べ上げる手法のことです。\n",
+        "# bit 全探索とは、n 個の要素からなる集合 {0,1,…,n−10,1,…,n−1} の部分集合をすべて調べ上げる手法のことです。\n",
         "# なお、ここでは、bit 全探索の方法と具体例を簡単に記していますが、より詳細な解説は以下の記事で行いました。\n",
         "# 疑問点が残った場合には、ぜひ読んでもらえたらと思います。\n",
         "\n",
@@ -1297,38 +1297,10 @@
         "!g++ temp.cpp; ./a.out"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "koxJIhdIxums",
-        "outputId": "41c839f0-830c-480c-f018-a63f4abff332"
+        "id": "koxJIhdIxums"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "8\n",
-            "0\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "000\n",
-            "001\n",
-            "010\n",
-            "011\n",
-            "100\n",
-            "101\n",
-            "110\n",
-            "111\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2563,15 +2535,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "FHDEOiuF5HSP"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 100,000 回サイコロを振ってそれぞれの回数を数えてみます。\n",
@@ -2607,7 +2570,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2630,7 +2593,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2678,7 +2641,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2701,7 +2664,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2720,106 +2683,143 @@
     {
       "cell_type": "code",
       "source": [
-        "かなり均等な結果となっていますね！\n",
+        "# かなり均等な結果となっていますね！\n",
         "\n",
-        "10. Binary Indexed Tree (BIT)\n",
-        "ビットを鮮やかに使いこなすデータ構造 BIT です。名前が凄まじくまぎらわしい！！！！！\n",
-        "BIT は区間に対する処理を高速に実現できるようになるデータ構造です。\n",
-        "以下のようなクエリが大量に飛んでくる状況を考えてみましょう (a や b や v の値はクエリ毎に変わる想定です):\n",
+        "# 10. Binary Indexed Tree (BIT)\n",
+        "# ビットを鮮やかに使いこなすデータ構造 BIT です。名前が凄まじくまぎらわしい！！！！！\n",
+        "# BIT は区間に対する処理を高速に実現できるようになるデータ構造です。\n",
+        "# 以下のようなクエリが大量に飛んでくる状況を考えてみましょう (a や b や v の値はクエリ毎に変わる想定です):\n",
         "\n",
-        "配列の a 番目から b 番目までに v を加算する\n",
-        "配列の a 番目から b 番目までの総和を求める\n",
+        "# 配列の a 番目から b 番目までに v を加算する\n",
+        "# 配列の a 番目から b 番目までの総和を求める\n",
         "\n",
+        "# 普通にやるとこれらはそれぞれ b - a + 1 箇所にアクセスすることになります。\n",
+        "# もし配列が巨大な場合、このようなクエリが大量に飛んで来られると途方もない時間がかかることになります。\n",
+        "# ビックデータという言葉が至るところに飛び交う昨今、このような大規模データを扱う大量のクエリを\n",
+        "# 高速に実施していくタイプの要求はひたすらに高まっています。\n",
         "\n",
-        "普通にやるとこれらはそれぞれ b - a + 1 箇所にアクセスすることになります。もし配列が巨大な場合、このようなクエリが大量に飛んで来られると途方もない時間がかかることになります。ビックデータという言葉が至るところに飛び交う昨今、このような大規模データを扱う大量のクエリを高速に実施していくタイプの要求はひたすらに高まっています。\n",
+        "# そしてなんと、BIT を用いると、上のクエリをともに超高速に実現することができます！！！\n",
+        "# 具体的には配列サイズを NN とすると、普通にやったら O(N)O(N) かかるクエリを、O(logN)O(log⁡N) \n",
+        "# で実施することができます。ここでは詳しい解説は省略して、以下の資料を参照していただけたらと思います:\n",
         "\n",
-        "そしてなんと、BIT を用いると、上のクエリをともに超高速に実現することができます！！！\n",
-        "具体的には配列サイズを NN とすると、普通にやったら O(N)O(N) かかるクエリを、O(logN)O(log⁡N) で実施することができます。ここでは詳しい解説は省略して、以下の資料を参照していただけたらと思います:\n",
+        "# Binary Indexed Tree のはなし (非常によくまとまっています)\n",
         "\n",
-        "Binary Indexed Tree のはなし　(非常によくまとまっています)\n",
-        "Peter M. Fenwick, 1994: A New Data Structure for Cumulative Frequency Tables　(元論文です)\n",
-        "11. bit DP\n",
-        "最後にここまでに登場したビット演算技法を用いて bit DP な処理をサッと書いてみましょう。bit DP は、nn 個の要素の順列 (n!n! 通りあります) としてありうるものの中から最適なものを求めたい場面でしばしば使えるテクニックです。bit DP は以下のような動的計画法フレームワークです:\n",
+        "# Peter M. Fenwick, 1994: A New Data Structure for Cumulative Frequency Tables (元論文です)\n",
         "\n",
-        "dpdp[SS] := 全体集合 {0,1,…,n−10,1,…,n−1} の部分集合 SS について、その中で順序を最適化したときの、SS の中での最小コスト\n",
-        "bit DP フレームワークでは、以下のような漸化式が成立することが多いです:\n",
+        "# 11. bit DP\n",
+        "# 最後にここまでに登場したビット演算技法を用いて bit DP な処理をサッと書いてみましょう。\n",
+        "# bit DP は、n個の要素の順列 (n! 通りあります) としてありうるものの中から最適なものを\n",
+        "# 求めたい場面でしばしば使えるテクニックです。bit DP は以下のような動的計画法フレームワークです:\n",
         "\n",
-        "dpdp[SS] = mini∈Smini∈S (dpdp[SS - {ii}] + cost(SS \\ {ii}, ii))\n",
-        "この式の意味を簡単に解説します。\n",
-        "SS についてその中で順序を最適化したときのコスト dpdp[SS] を計算したいのですが、その順序の最後の要素がなんだったかで場合分けします:\n",
+        "# dp[S] := 全体集合 {0,1,…,n−1} の部分集合 S について、\n",
         "\n",
-        "SS の最後が ii だったとき、SS の最後の ii を除いた部分集合についての最適解は dpdp[SS - {ii}] になります。SS - {ii} に ii を加えて増えるコストを cost(SS \\ {ii}, ii) とすると、結局最小コストは dpdp[SS - {ii}] + cost(SS - {ii}, ii) になります。\n",
+        "# その中で順序を最適化したときの、S の中での最小コスト\n",
         "\n",
-        "あとは ii を i∈Si∈S の範囲で全部試してあげて、総合的に一番コストが小さかったものを採用します。以上をまとめると bit DP フレームワークは以下のように表せます:\n",
+        "# bit DP フレームワークでは、以下のような漸化式が成立することが多いです:\n",
         "\n",
-        "＜bit DP 遷移式＞\n",
+        "# dp[S] = min_{i∈S} (dp[S - {i}] + cost(S \\ {i}, i))\n",
         "\n",
-        "dpdp[SS] = mini∈Smini∈S (dpdp[SS - {ii}] + cost(SS - {ii}, ii))\n",
-        "＜初期値＞\n",
+        "# この式の意味を簡単に解説します。\n",
         "\n",
-        "dpdp[0] = 0　(何もない初期状態)\n",
-        "＜最終的な最小コスト＞\n",
+        "# S についてその中で順序を最適化したときのコスト dp[S] を計算したいのですが、\n",
+        "# その順序の最後の要素がなんだったかで場合分けします:\n",
         "\n",
-        "dpdp[(1<<nn) - 1]\n",
-        "　\n",
+        "# S の最後が i だったとき、S の最後の i を除いた部分集合についての最適解は \n",
+        "# dp[S - {i}] になります。S - {i} に i を加えて増えるコストを cost(S \\ {i}, i) とすると、\n",
+        "# 結局最小コストは dp[S - {i}] + cost(S - {i}, i) になります。\n",
         "\n",
-        "bit DP フレームワークを適用できる具体的な問題として、これまた組合せ最適化の分野では非常に有名な問題である巡回セールスマン問題を考えてみます。この問題もまた、効率よく解けるアルゴリズムは存在しないと広く信じられている NP 困難問題であり、万が一効率よく解けるアルゴリズムを開発できたらノーベル賞級です。\n",
+        "# あとは i を i∈S の範囲で全部試してあげて、総合的に一番コストが小さかったものを採用します。\n",
+        "# 以上をまとめると bit DP フレームワークは以下のように表せます:\n",
         "\n",
-        "巡回セールスマン問題\n",
-        "nn 個の都市を、好きな都市から出発してちょうど一度ずつすべての都市を訪れたい。一度訪れた都市にはもう一度行くことはできない。所要時間を最短になるようにせよ。なお、街 ii から街 jj へと移動するのにかかる時間 distdist[ii][jj] が与えられる。\n",
+        "# ＜bit DP 遷移式＞\n",
         "\n",
-        "【制約】\n",
-        "・1≤n≤201≤n≤20\n",
-        "・0≤dist[i][j]≤10000≤dist[i][j]≤1000\n",
-        "・dist[i][i]=0dist[i][i]=0\n",
-        "・dist[i][j]=dist[j][i]dist[i][j]=dist[j][i]\n",
+        "# dp[S] = min_{i∈S} (dp[S - {i}] + cost(S - {i}, i))\n",
         "\n",
-        "【数値例】\n",
-        "1)\n",
-        "　n=3n=3\n",
-        "　dist=dist=\n",
-        "0 5 2\n",
-        "5 0 4\n",
-        "2 4 0\n",
-        "　答え: 6 (0 -> 2 -> 1 の順にたどると 6 秒で行けます)\n",
+        "# ＜初期値＞\n",
         "\n",
-        "2)\n",
-        "　n=4n=4\n",
-        "　dist=dist=\n",
-        "0 8 7 3\n",
-        "8 0 9 1\n",
-        "7 9 0 4\n",
-        "3 1 4 0\n",
-        "　答え: 11 (1 -> 3 -> 0 -> 2 の順にたどると 11 秒で行けます)\n",
+        "# dp[0] = 0 (何もない初期状態)\n",
         "\n",
-        "　\n",
+        "# ＜最終的な最小コスト＞\n",
         "\n",
+        "# dp[(1<<n) - 1]\n",
+        "# 　\n",
         "\n",
+        "# bit DP フレームワークを適用できる具体的な問題として、これまた組合せ最適化の分野では\n",
+        "# 非常に有名な問題である巡回セールスマン問題を考えてみます。\n",
+        "# この問題もまた、効率よく解けるアルゴリズムは存在しないと広く信じられている NP 困難問題であり、\n",
+        "# 万が一効率よく解けるアルゴリズムを開発できたらノーベル賞級です。\n",
         "\n",
-        "まさに、nn 個の都市を巡る順序 (n!n! 通りあります) を最適化する問題ですね。bit DP フレームワークに乗せて\n",
+        "# 巡回セールスマン問題\n",
         "\n",
-        "dpdp[SS] := 全体集合 {0,1,…,n−10,1,…,n−1} の部分集合 SS について、その中で順序を最適化したときの、SS の中での最小コスト\n",
-        "としたくなるのですが、今回は少しだけ工夫が必要です。bit DP の漸化式を見ると\n",
+        "# n 個の都市を、好きな都市から出発してちょうど一度ずつすべての都市を訪れたい。\n",
+        "# 一度訪れた都市にはもう一度行くことはできない。所要時間を最短になるようにせよ。\n",
+        "# なお、街 i から街 j へと移動するのにかかる時間 dist[i][j] が与えられる。\n",
         "\n",
-        "dpdp[SS] = mini∈Smini∈S (dpdp[SS - {ii}] + cost(SS - {ii}, ii))\n",
-        "となっており、cost(SS - {ii}, ii) を計算できる必要があります。しかしこれは、SS - {ii} のうち、どの都市が最後だったかに依存 (最後の都市が uu なら dist[uu][ii] です) してしまうため、このままでは一つに決まりません。そこで次のように DP テーブルを修正します:\n",
+        "# 【制約】\n",
+        "# ・1≤n≤20\n",
+        "# ・0≤dist[i][j]≤1000\n",
+        "# ・dist[i][i]=0\n",
+        "# ・dist[i][j]=dist[j][i]\n",
         "\n",
-        "dpdp[SS][vv] := 全体集合 {0,1,…,n−10,1,…,n−1} の部分集合 SS について、最後が vv であるという制約の下で順序を最適化したときの、SS の中での最小コスト\n",
-        "DP 漸化式の方も少々の修正で実現できます:\n",
+        "# 【数値例】\n",
+        "# 1)\n",
+        "# 　n=3\n",
+        "# 　dist=\n",
+        "# 0 5 2\n",
+        "# 5 0 4\n",
+        "# 2 4 0\n",
+        "# 　答え: 6 (0 -> 2 -> 1 の順にたどると 6 秒で行けます)\n",
         "\n",
-        "dpdp[SS][vv] = minu∈(S−{v})minu∈(S−{v}) (dpdp[SS - {vv}][uu] + dist[uu][vv])\n",
-        "今度は SS の最後は vv だとわかっているため、SS - {vv} の最後が何かで場合分けしています。また初期値と最終的な値は次のようになります:\n",
+        "# 2)\n",
+        "# 　n=4\n",
+        "# 　dist=\n",
+        "# 0 8 7 3\n",
+        "# 8 0 9 1\n",
+        "# 7 9 0 4\n",
+        "# 3 1 4 0\n",
+        "# 　答え: 11 (1 -> 3 -> 0 -> 2 の順にたどると 11 秒で行けます)\n"
+      ],
+      "metadata": {
+        "id": "Kfs8I8bz5MbO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# まさに、n 個の都市を巡る順序 (n! 通りあります) を最適化する問題ですね。bit DP フレームワークに乗せて\n",
         "\n",
-        "＜初期値＞\n",
+        "# dp[S] := 全体集合 {0,1,…,n−1} の部分集合 S について、その中で順序を最適化したときの、S の中での最小コスト\n",
+        "# としたくなるのですが、今回は少しだけ工夫が必要です。bit DP の漸化式を見ると\n",
         "\n",
-        "dpdp[1<<vv][vv]=0=0　(vv からスタート)\n",
-        "＜最終的な最小コスト＞\n",
+        "# dp[S] = min_{i∈S} (dp[S - {i}] + cost(S - {i}, i))\n",
         "\n",
-        "minvdpminvdp[(1<<nn) - 1][vv]\n",
-        "以上を実装すると以下のようになります。今回はメモ化再帰の形式で実装してみます。\n",
+        "# となっており、cost(S - {i}, i) を計算できる必要があります。しかしこれは、S - {i} のうち、\n",
+        "# どの都市が最後だったかに依存 (最後の都市が u なら dist[u][i] です) してしまうため、\n",
+        "# このままでは一つに決まりません。そこで次のように DP テーブルを修正します:\n",
         "\n",
-        "#include <iostream>\n",
-        "#include <bitset>\n",
+        "# dp[S][v] := 全体集合 {0,1,…,n−1} の部分集合 S について、\n",
+        "# 最後が v であるという制約の下で順序を最適化したときの、S の中での最小コスト\n",
+        "# DP 漸化式の方も少々の修正で実現できます:\n",
+        "\n",
+        "# dp[S][v] = min_{u∈(S−{v})} (dp[S - {v}][u] + dist[u][v])\n",
+        "\n",
+        "# 今度は S の最後は v だとわかっているため、S - {v} の最後が何かで場合分けしています。\n",
+        "# また初期値と最終的な値は次のようになります:\n",
+        "\n",
+        "# ＜初期値＞\n",
+        "\n",
+        "# dp[1<<v][v]=0 (v からスタート)\n",
+        "\n",
+        "# ＜最終的な最小コスト＞\n",
+        "\n",
+        "# min_v dp[(1<<n) - 1][v]\n",
+        "\n",
+        "# 以上を実装すると以下のようになります。今回はメモ化再帰の形式で実装してみます。\n",
+        "\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "const int INF = 100000000; // 十分大きな値\n",
@@ -2880,20 +2880,95 @@
         "        }\n",
         "    }\n",
         "    cout << res << endl;\n",
-        "}\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "MY82EfkLdnmP",
+        "outputId": "1ad2d56e-4cdc-4918-95bd-1bd277e25141",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 3 0 5 2 5 0 4 2 4 0 |./a.out #=> 6\n",
+        "!g++ temp.cpp; echo 4 0 8 7 3 8 0 9 1 7 9 0 4 3 1 4 0 |./a.out #=> 11"
+      ],
+      "metadata": {
+        "id": "L8-Ok9pff3VU",
+        "outputId": "c484306c-61eb-450c-db8c-16d4f752e7b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n",
+            "11\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "xR1gFXWTk_Ye"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "bit DP による計算時間の改善効果\n",
-        "bit DP は、nn 個の要素の順列としてありうるものの中から最適なものを求めたい場面で使えるフレームワークでした。計算時間の改善は、O(n!)O(n!) から O(n2n)O(n2n) になります (巡回セールスマン問題の場合は O(n22n)O(n22n))。\n",
         "\n",
-        "計算時間を改善しても結局指数時間なので、あまり有効でない雰囲気も漂わせていますが、O(n!)O(n!) な全探索だと n≤10n≤10 程度までしか実施できない探索が、n≤20n≤20 程度までできるようになります。\n",
+        "bit DP は、n 個の要素の順列としてありうるものの中から最適なものを求めたい場面で使える\n",
+        "フレームワークでした。計算時間の改善は、O(n!)O から O(n2n) になります\n",
+        " (巡回セールスマン問題の場合は O(n^2 2^n))。\n",
         "\n",
+        "計算時間を改善しても結局指数時間なので、あまり有効でない雰囲気も漂わせていますが、O(n!) な\n",
+        "全探索だと n≤10 程度までしか実施できない探索が、n≤20 程度までできるようになります。\n",
+        "%%html\n",
         "計算量\tn=1n=1\tn=5n=5\tn=10n=10\tn=15n=15\tn=20n=20\tn=25n=25\tn=30n=30\n",
         "O(n2)O(n2)\t1　 　\t25\t100\t225\t400\t625\t900\n",
         "O(n2n)O(n2n)\t2 　　\t160\t10,240\t491,520\t20,971,520\t838,860,800\t32,212,254,720\n",
-        "O(n!)O(n!)\t1 　　\t120\t3,628,800\t1,307,674,368,000\t-\t-\t-\n",
-        "この延命のような nn の伸びがクリティカルに効いてくる場面も少なくありません。私自身も実務案件で bitDP が有効に利用できた場面が過去二度ほどありました。\n",
+        "O(n!)O(n!)\t1 　　\t120\t3,628,800\t1,307,674,368,000\t-\t-\t-\n"
+      ],
+      "metadata": {
+        "id": "UqAw0OtTfuLP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "この延命のような n の伸びがクリティカルに効いてくる場面も少なくありません。\n",
+        "私自身も実務案件で bitDP が有効に利用できた場面が過去二度ほどありました。\n",
         "\n",
         "付録: next_combination の成立理由\n",
-        "今まで出て来た例のうち、next_combination はなぜあのような実装で実現できるのかがあまり自明ではありません。詳しく知りたい方はプログラミングコンテストチャレンジブックの P.143〜145 のコラムを読んでいただければと思います。\n",
+        "\n",
+        "今まで出て来た例のうち、next_combination はなぜあのような実装で実現できるのかがあまり\n",
+        "自明ではありません。詳しく知りたい方はプログラミングコンテストチャレンジブックの \n",
+        "P.143〜145 のコラムを読んでいただければと思います。\n",
         "\n",
         "おおまかに以下のような性質を利用しています:\n",
         "\n",
@@ -3013,7 +3088,7 @@
         "}\n"
       ],
       "metadata": {
-        "id": "Kfs8I8bz5MbO"
+        "id": "p67xuGy7hEKt"
       },
       "execution_count": null,
       "outputs": []
