Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNeZ6g6LzfjQG0gASxBWzDM",
+      "authorship_tag": "ABX9TyM8lC1dPTf7nQphrtaISJng",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,9 +35,9 @@
         "\n",
         "AtCoder Programming Guide for Beginners APG4b\n",
         "\n",
-        "の練習問題をやる。\n",
+        "https://atcoder.jp/contests/apg4b\n",
         "\n",
-        "https://atcoder.jp/contests/apg4b"
+        "を読む"
       ],
       "metadata": {
         "id": "8kHv-8CgciQc"
@@ -17459,7 +17459,7 @@
         " \n",
         "  // すべての選び方を試して、総和がKになるものがあるかを調べる\n",
         "  for (int tmp = 0; tmp < (1 << 20); tmp++) {\n",
-        "    bitset<20> s(tmp);  // 最大20個なので20ビットのビット列として扱う\n",
+        "    bitset<20> s(tmp);  // 最大20個なので20ビットのビット列として扱う, 変数 N は使えない\n",
         " \n",
         "    // ビット列の1のビットに対応する整数を選んだとみなして総和を求める\n",
         "    int sum = 0;\n",
@@ -17485,9 +17485,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lbNl2ylvS_VI",
-        "outputId": "0451353c-d535-4500-d74e-f55486b8e2a8"
+        "outputId": "7e59709a-1bcd-457c-e752-2fa2d89252c5"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -17510,9 +17510,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iVbbLUSxSfS1",
-        "outputId": "614de593-e2af-459c-8630-b02d78f010d0"
+        "outputId": "50b63280-45f3-4b48-8d00-bac0c8628c31"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -17524,6 +17524,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "UW1q-mK8my-4"
+      }
     },
     {
       "cell_type": "code",
