Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM8lC1dPTf7nQphrtaISJng",
+      "authorship_tag": "ABX9TyOEC4DnWXv5MjF1GoKdpXrb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -17526,15 +17526,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "UW1q-mK8my-4"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# bitsetと整数の相互変換\n",
@@ -17732,15 +17723,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "eJTipMtIu7M7"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 解答例\n",
@@ -17897,13 +17879,91 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "# いまここ"
+        "# 理解のための実験\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "const int n = 50;\n",
+        "\n",
+        "// 集合 bitset S に値 x を加える\n",
+        "bitset<n> add(bitset<n> S, int x) {\n",
+        "  S.set(x, 1);  // xビット目を1にする\n",
+        "  return S;\n",
+        "}\n",
+        "\n",
+        "// 集合 bitset S の内容を数字の文字列にする\n",
+        "string print_set(bitset<n> S) {\n",
+        "  string str = \"\";\n",
+        "  str += \"{\";\n",
+        "  bool isFirst = true;\n",
+        "  for (int i = 0; i < n; i++) {\n",
+        "    if (S.test(i)) {\n",
+        "      if (!isFirst) str += \", \";\n",
+        "      str += to_string(i);\n",
+        "      isFirst = false;\n",
+        "    }\n",
+        "  }\n",
+        "  str += \"}\";\n",
+        "  return str;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  bitset<n> A;\n",
+        "  int N;\n",
+        "  cin >> N;\n",
+        "  for (int i = 0; i < N; i++) {\n",
+        "    int x;\n",
+        "    cin >> x;\n",
+        "    A = add(A, x);\n",
+        "  }\n",
+        "  cout << print_set(A) << endl;\n",
+        "  cout << A << endl;\n",
+        "}"
       ],
       "metadata": {
-        "id": "hVUSVfAoJgGS"
-      }
+        "id": "_3UxwZkrpJee",
+        "outputId": "8557e258-e679-40ae-dd90-b4dd73152d73",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 4 8 2 0 5 |./temp"
+      ],
+      "metadata": {
+        "id": "kOUZxV4hpOZ2",
+        "outputId": "edfaaf3d-ea4a-4d18-9fb4-a29d73842c60",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{0, 2, 5, 8}\n",
+            "00000000000000000000000000000000000000000100100101\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -17998,6 +18058,104 @@
           "text": [
             "176\n",
             "12656242944\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "hVUSVfAoJgGS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ARC061 C - たくさんの数式 / Many Formulas をビット演算で解く\n",
+        "# bitset を使って解く\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "\n",
+        "int main(){\n",
+        "    string str;\n",
+        "    cin >> str;\n",
+        "    int sum = 0;\n",
+        "    for (int tmp = 0; tmp < (1 << (str.size()-1)); tmp++) {\n",
+        "        bitset<50> s(tmp);\n",
+        "        sum += sums(str, s);\n",
+        "    }\n",
+        "\n",
+        "    cout << sum << endl;\n",
+        "}\n",
+        "/*\n",
+        "long long value(int bit){\n",
+        "    long long v=0;\n",
+        "    // 0文字目\n",
+        "    string c=s.substr(0,1);\n",
+        "\n",
+        "    REP(i,n){  \n",
+        "        // i番目が'+'なら\n",
+        "        if(bit&(1<<i)){\n",
+        "            v+=stoll(c);\n",
+        "            c.clear();\n",
+        "            c=s.substr(i+1,1);\n",
+        "        // そうでないなら\n",
+        "        }else{\n",
+        "            c+=s.substr(i+1,1);\n",
+        "        }\n",
+        "    }\n",
+        "    // 最後に残っている部分を足す\n",
+        "    v+=stoll(c);\n",
+        "    \n",
+        "    return v;\n",
+        "} */"
+      ],
+      "metadata": {
+        "id": "Jei-R63JCBiQ",
+        "outputId": "be2b8495-e29f-4ffe-b9e7-24380bdde5a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 125 |./temp #=> 176\n",
+        "# !g++ temp.cpp -o temp; echo 9999999999 |./temp #=> 12656242944"
+      ],
+      "metadata": {
+        "id": "NCOH9288COne",
+        "outputId": "fcce4fc2-452a-48fa-8e40-93bf4649f64a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "00000000000000000000000000000000000000000000000000\n",
+            "00000000000000000000000000000000000000000000000001\n",
+            "00000000000000000000000000000000000000000000000010\n",
+            "00000000000000000000000000000000000000000000000011\n"
           ]
         }
       ]
