Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOEC4DnWXv5MjF1GoKdpXrb",
+      "authorship_tag": "ABX9TyM9cCWrsZRlS4Y06uhjFEPt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -17924,11 +17923,11 @@
         "}"
       ],
       "metadata": {
-        "id": "_3UxwZkrpJee",
-        "outputId": "8557e258-e679-40ae-dd90-b4dd73152d73",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_3UxwZkrpJee",
+        "outputId": "8557e258-e679-40ae-dd90-b4dd73152d73"
       },
       "execution_count": 29,
       "outputs": [
@@ -17947,11 +17946,11 @@
         "!g++ temp.cpp -o temp; echo 4 8 2 0 5 |./temp"
       ],
       "metadata": {
-        "id": "kOUZxV4hpOZ2",
-        "outputId": "edfaaf3d-ea4a-4d18-9fb4-a29d73842c60",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kOUZxV4hpOZ2",
+        "outputId": "edfaaf3d-ea4a-4d18-9fb4-a29d73842c60"
       },
       "execution_count": 30,
       "outputs": [
@@ -18080,49 +18079,51 @@
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
+        "long long value(string str, bitset<50> s){\n",
+        "    long long result = 0;\n",
+        "    string tempString = \"\";\n",
+        "    if (str == \"\") return result;\n",
+        "    for (int i=0; i<s.size(); i++){\n",
+        "        if (i < str.size()) tempString += str.at(i);\n",
+        "        if (s.test(i)) {\n",
+        "            result += stoi(tempString);\n",
+        "            tempString = \"\";\n",
+        "        }\n",
+        "    }\n",
+        "    result += stoll(tempString);\n",
+        "    return result;\n",
+        "}\n",
+        "\n",
+        "string expression(string str, bitset<50> s){\n",
+        "    string result = \"\";\n",
+        "    if (str == \"\") return result;\n",
+        "    for (int i=0; i<s.size(); i++){\n",
+        "            if (i < str.size())result += str.at(i);\n",
+        "            if (s.test(i)) result += \"+\";\n",
+        "    }\n",
+        "    return result;\n",
+        "}\n",
         "\n",
         "int main(){\n",
         "    string str;\n",
         "    cin >> str;\n",
-        "    int sum = 0;\n",
+        "    long long sum = 0;\n",
         "    for (int tmp = 0; tmp < (1 << (str.size()-1)); tmp++) {\n",
         "        bitset<50> s(tmp);\n",
-        "        sum += sums(str, s);\n",
+        "        // cout << expression(str, s) << endl;\n",
+        "        sum += value(str, s);\n",
         "    }\n",
-        "\n",
         "    cout << sum << endl;\n",
-        "}\n",
-        "/*\n",
-        "long long value(int bit){\n",
-        "    long long v=0;\n",
-        "    // 0文字目\n",
-        "    string c=s.substr(0,1);\n",
-        "\n",
-        "    REP(i,n){  \n",
-        "        // i番目が'+'なら\n",
-        "        if(bit&(1<<i)){\n",
-        "            v+=stoll(c);\n",
-        "            c.clear();\n",
-        "            c=s.substr(i+1,1);\n",
-        "        // そうでないなら\n",
-        "        }else{\n",
-        "            c+=s.substr(i+1,1);\n",
-        "        }\n",
-        "    }\n",
-        "    // 最後に残っている部分を足す\n",
-        "    v+=stoll(c);\n",
-        "    \n",
-        "    return v;\n",
-        "} */"
+        "}"
       ],
       "metadata": {
-        "id": "Jei-R63JCBiQ",
-        "outputId": "be2b8495-e29f-4ffe-b9e7-24380bdde5a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Jei-R63JCBiQ",
+        "outputId": "30d1b6c8-476e-4a7a-fd67-3ff3192ff821"
       },
-      "execution_count": 38,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
@@ -18137,25 +18138,25 @@
       "cell_type": "code",
       "source": [
         "!g++ temp.cpp -o temp; echo 125 |./temp #=> 176\n",
-        "# !g++ temp.cpp -o temp; echo 9999999999 |./temp #=> 12656242944"
+        "!echo\n",
+        "!g++ temp.cpp -o temp; echo 9999999999 |./temp #=> 12656242944"
       ],
       "metadata": {
-        "id": "NCOH9288COne",
-        "outputId": "fcce4fc2-452a-48fa-8e40-93bf4649f64a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NCOH9288COne",
+        "outputId": "3c0e10b2-da2a-4cc6-ede2-caa3a521effa"
       },
-      "execution_count": 39,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "00000000000000000000000000000000000000000000000000\n",
-            "00000000000000000000000000000000000000000000000001\n",
-            "00000000000000000000000000000000000000000000000010\n",
-            "00000000000000000000000000000000000000000000000011\n"
+            "176\n",
+            "\n",
+            "12656242944\n"
           ]
         }
       ]
@@ -18163,14 +18164,81 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "# ABC079 C - Train Ticket をビット演算で解く\n",
+        "# 問題\n",
+        "# 駅の待合室に座っているjoisinoお姉ちゃんは、切符を眺めています。\n",
+        "# 切符には 4 つの 0 以上 9 以下の整数 A,B,C,D が整理番号としてこの順に書かれています。\n",
+        "# A op1 B op2 C op3 D = 7 となるように、op1,op2,op3 に + か - を入れて式を作って下さい。\n",
+        "# なお、答えが存在しない入力は与えられず、また答えが複数存在する場合はどれを出力してもよいものとします。\n",
+        "# 作った式を、=7 の部分を含めて出力せよ。\n",
+        "\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int abcd;\n",
+        "  cin >> abcd;\n",
+        "  vector<int> ticket(4);\n",
+        "\n",
+        "  for(int i = 3; i > -1; i--){\n",
+        "    ticket[i] = (abcd%10); // 1桁取り出していく\n",
+        "    abcd /= 10;\n",
+        "  }\n",
+        "\n",
+        "  for(int bit = 0; bit < (1 << 3); bit++){\n",
+        "    int ans = ticket[0];\n",
+        "\n",
+        "    for(int idx = 0; idx < 3; idx++){\n",
+        "      if(bit & (1 << idx)) ans += ticket[idx + 1];\n",
+        "\n",
+        "      else ans -= ticket[idx + 1];\n",
+        "    }\n",
+        "\n",
+        "    if(ans == 7){\n",
+        "      cout << ticket[0];\n",
+        "\n",
+        "      for(int idx = 0; idx < 3; idx++){\n",
+        "        if(bit & (1 << idx)) cout << '+';\n",
+        "        else cout << '-';\n",
+        "\n",
+        "        cout << ticket[idx + 1];\n",
+        "      }\n",
+        "\n",
+        "      cout << \"=7\" << endl;\n",
+        "      break;\n",
+        "    }\n",
+        "  }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "P_hOEcnK6dbP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 1222 |./temp #=> 1+2+2+2=7\n",
+        "!g++ temp.cpp -o temp; echo 0290 |./temp #=> 0-2+9+0=7\n",
+        "!g++ temp.cpp -o temp; echo 3242 |./temp #=> 3+2+4-2=7"
+      ],
+      "metadata": {
+        "id": "oGWFP_SNeYB2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ABC104 C - All Green をビット演算で解く\n",
         "# ARC029 A - 高橋君とお肉 をビット演算で解く\n",
         "# ABC002 D - 派閥 をビット演算で解く"
       ],
       "metadata": {
-        "id": "P_hOEcnK6dbP"
+        "id": "Fg6qTn1KeXbo"
       },
       "execution_count": null,
       "outputs": []
