--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMZy179Zg/AFLP47fe1ApSb",
+      "authorship_tag": "ABX9TyOalmTBKmYsIN8OCFOvE4JG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,60 +46,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 目次  \n",
         "\n",
-        "1.00.はじめに  \n",
-        "1.01.出力とコメント | EX1  \n",
-        "1.02.プログラムの書き方とエラー | EX2  \n",
-        "1.03.四則演算と優先順位 | EX3  \n",
-        "1.04.変数と型 | EX4  \n",
-        "1.05.プログラムの実行順序と入力 | EX5  \n",
-        "1.06.if文・比較演算子・論理演算子 | EX6  \n",
-        "1.07.条件式の結果とbool型 | EX7  \n",
-        "1.08.変数のスコープ | EX8  \n",
-        "1.09.複合代入演算子 | EX9  \n",
-        "1.10.while文 | EX10  \n",
-        "1.11.for文・break・continue | EX11  \n",
-        "1.12.文字列と文字 | EX12 <= このあたりから普通の言語と違う  \n",
-        "1.13.配列 | EX13  <= vector を使っている\n",
-        "1.14.STLの関数 | EX14  \n",
-        "1.15.関数 | EX15  \n",
-        "  \n",
-        "2.00.第2章について  \n",
-        "2.01.ループの書き方と範囲for文 | EX16  \n",
-        "2.02.多重ループ | EX17  \n",
-        "2.03.多次元配列 | EX18  \n",
-        "2.04.参照 | EX19  \n",
-        "2.05.再帰関数 | EX20  \n",
-        "2.06.計算量 | EX21  \n",
-        "  \n",
-        "3.00.第3章について  \n",
-        "3.01.数値型  \n",
-        "3.02.pair/tupleとauto | EX22  \n",
-        "3.03.STLのコンテナ | EX23  \n",
-        "3.04.構造体 | EX24  \n",
-        "3.05.ビット演算 | EX25  \n",
-        "3.06.その他の機能 | EX26  \n",
-        "  \n",
-        "4.00.第4章について  \n",
-        "4.01.includeディレクティブ  \n",
-        "4.02.名前空間  \n",
-        "4.03.テンプレート  \n",
-        "4.04.イテレータ  \n",
-        "4.05.ポインタ  \n",
-        "  \n",
-        "付録1.コードテストの使い方  \n",
-        "付録2.提出結果の見方  \n",
-        "付録3.コンパイルエラー集  \n",
-        "付録4.ループの裏技repマクロ  "
-      ],
-      "metadata": {
-        "id": "5sm38Af7dBS3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
+        "---\n",
         "bits/stdc++.h の利用\n",
         "\n",
         "`#include <bits/stdc++.h>` で iostream, string, vector とか云々。\n",
@@ -183,8 +131,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# ハローワールドのプログラムで return を入れてみた\n",
-        "# return 0 としないとエラーになる\n",
+        "# 実験\n",
+        "# ハローワールドのプログラムで return を入れてみた => return 0 としないとエラーになる\n",
         "# セミコロンも必要、javascript みたいに補ってくれない\n",
         "# int main を void main にしたらエラーになった\n",
         "# int main(void) は通った\n",
@@ -196,8 +144,7 @@
         "int main(int argc, char *argv[]) {\n",
         "  cout << argc << endl;\n",
         "  cout << argv[2] << endl;\n",
-        "}\n",
-        "\n"
+        "}"
       ],
       "metadata": {
         "id": "N6JoT1wTAeIh",
@@ -18219,7 +18166,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -18244,7 +18191,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
