Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPht/nesXged35FtJutyoiS",
+      "authorship_tag": "ABX9TyMZDYi9vdJ1WHWxG0CXPGsu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,28 +44,78 @@
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "string conv2ja(int num){\n",
+        "string conv2en(long num){\n",
         "    string result = \"\";\n",
-        "    result = to_string(num);\n",
+        "    if (num == 0) return \"0\";\n",
+        "    if (num > 999999999999) {\n",
+        "        result += to_string(num / 1000000000000);\n",
+        "        result += \"trillion\";\n",
+        "        num = (num % 1000000000000);\n",
+        "    }\n",
+        "    if (num > 999999999) {\n",
+        "        result += to_string(num / 1000000000);\n",
+        "        result += \"billion\";\n",
+        "        num = (num % 1000000000);\n",
+        "    }\n",
+        "    if (num > 999999) {\n",
+        "        result += to_string(num / 1000000);\n",
+        "        result += \"million\";\n",
+        "        num = (num % 1000000);\n",
+        "    }\n",
+        "    if (num > 999) {\n",
+        "        result += to_string(num / 1000);\n",
+        "        result += \"thousand\";\n",
+        "        num = (num % 1000);\n",
+        "    }\n",
+        "    if (num > 0) {\n",
+        "        result += to_string(num);\n",
+        "    }\n",
         "    return result;\n",
         "}\n",
-        " \n",
+        "string conv2ja(long num){\n",
+        "    string result = \"\";\n",
+        "    if (num == 0) return \"0\";\n",
+        "    if (num > 9999999999999999) {\n",
+        "        result += to_string(num / 10000000000000000);\n",
+        "        result += \"京\";\n",
+        "        num = (num % 10000000000000000);\n",
+        "    }\n",
+        "    if (num > 999999999999) {\n",
+        "        result += to_string(num / 1000000000000);\n",
+        "        result += \"兆\";\n",
+        "        num = (num % 1000000000000);\n",
+        "    }\n",
+        "    if (num > 99999999) {\n",
+        "        result += to_string(num / 100000000);\n",
+        "        result += \"億\";\n",
+        "        num = (num % 100000000);\n",
+        "    }\n",
+        "    if (num > 9999) {\n",
+        "        result += to_string(num / 10000);\n",
+        "        result += \"万\";\n",
+        "        num = (num % 10000);\n",
+        "    }\n",
+        "    if (num > 0) {\n",
+        "        result += to_string(num);\n",
+        "    }\n",
+        "    return result;\n",
+        "}\n",
+        "\n",
         "int main() {\n",
-        "    int num;\n",
+        "    long num;\n",
         "    cin >> num;\n",
-        "    cout << num << endl;\n",
         "    cout << conv2ja(num) << endl;\n",
-        "    // cout << conv2en << endl; \n",
+        "    cout << conv2en(num) << endl; \n",
         "}"
       ],
       "metadata": {
-        "id": "rxE1YKUyZcsv",
-        "outputId": "d2f822ed-0061-4b72-9d86-b460f3a3ddeb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rxE1YKUyZcsv",
+        "outputId": "546b8efc-a24b-4d33-f216-8f969a3c68c3"
       },
-      "execution_count": 39,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,23 +129,44 @@
     {
       "cell_type": "code",
       "source": [
-        "!g++ temp.cpp; echo 299 | ./a.out"
+        "!g++ temp.cpp; echo 12345678901234567 | ./a.out\n",
+        "!g++ temp.cpp; echo 0000 | ./a.out\n",
+        "!g++ temp.cpp; echo 10000 | ./a.out\n",
+        "!g++ temp.cpp; echo 100000000 | ./a.out\n",
+        "!g++ temp.cpp; echo 1000000000000 | ./a.out\n",
+        "!g++ temp.cpp; echo 10000000000000000 | ./a.out\n",
+        "!g++ temp.cpp; echo 100000000000000000000 | ./a.out\n",
+        "!g++ temp.cpp; echo 1000000000000000000 | ./a.out"
       ],
       "metadata": {
-        "id": "Dsq-VdS_ZuM1",
-        "outputId": "186cf0b3-2b5b-48d2-d1b7-b157f147077d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Dsq-VdS_ZuM1",
+        "outputId": "4a1b1511-3fbd-4505-ed09-d3c112749d13"
       },
-      "execution_count": 40,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "299\n",
-            "299\n"
+            "1京2345兆6789億123万4567\n",
+            "12345trillion678billion901million234thousand567\n",
+            "0\n",
+            "0\n",
+            "1万\n",
+            "10thousand\n",
+            "1億\n",
+            "100million\n",
+            "1兆\n",
+            "1trillion\n",
+            "1京\n",
+            "10000trillion\n",
+            "922京3372兆368億5477万5807\n",
+            "9223372trillion36billion854million775thousand807\n",
+            "100京\n",
+            "1000000trillion\n"
           ]
         }
       ]
